# asrq

./: .gitignore  README.md  hadamard_pres.tex  pyproject.toml  runners.md
asrq/: __init__.py  exp.py  rot-exp.py
asrq/calibration/: base.py
asrq/configs/: config.yaml  parakeetctc_config.yaml
asrq/configs/model/: whisper.yaml
asrq/configs/quantizer/: rtn.yaml
asrq/configs/transform/: rotation.yaml  rotscaling.yaml  scaling.yaml  shrinking.yaml
asrq/core/: linear.py  model.py  registry.py  types.py  utils.py
asrq/evaluation/: base.py  english_text_normalizer.py  openasr.py  utils.py
asrq/kernel/: bindings.cpp  bindings.py
asrq/matmulq/: base.py  benchmark.py  test.py  testing.py
asrq/matmulq/csrc/: bindings.cpp
asrq/matmulq/csrc/cuda/: ptx.h  (+7 more)
asrq/models/nemo/: canary_qwen.py  conformerq.py  parakeet_ctc.py
asrq/models/transformers/: whisper.py
asrq/quantizers/: __init__.py  activation.py  base.py  gptq.py  rtn.py  ulbq.py
asrq/transforms/: __init__.py  base.py
asrq/transforms/rotation/: __init__.py  base.py  canary_qwen_utils.py  cayley_sgd.py  hadamard_utils.py  parakeet_ctc_utils.py  runsearch.md  search.py  utils.py  whisper_utils.py
asrq/transforms/rotscaling/: base.py
asrq/transforms/scaling/: base.py  canary_qwen_utils.py  parakeet_ctc_utils.py  whisper_utils.py
tests/: test_canary_qwen.py  test_evaluation_audio_files.py  test_exp_paths.py  test_openasr_dataset_retry.py  test_parakeet_ctc.py  test_rotation_search.py  test_whisper.py
tests/configs/: config.yaml
tests/configs/model/: canary_qwen.yaml  parakeet.yaml  whisper.yaml
(+7 files in other folders)
