[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asrq"
version = "0.1.0"
description = "ASR Quantization toolkit"
requires-python = ">=3.8"
dependencies = [
    "hydra-core>=1.3",
    "omegaconf>=2.3",
]

[project.scripts]
asrq-exp = "asrq.exp:main"

[tool.setuptools.packages.find]
include = ["asrq*"]

[tool.setuptools.package-data]
asrq = ["configs/**/*.yaml"]
